--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -6,15 +6,15 @@
             <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
             <div class="col-sm-10">
                 <input type="email" class="form-control" id="inputEmail3" formControlName="email">
-                <span *ngIf="checkoutform.get('email').touched &&checkoutform.get('email')hasError('required')">Enter Email Address</span>
-                <span *ngIf="checkoutform.get('email').touched &&checkoutform.get('email')hasError('required')">Enter Valid Email Address</span>
+                <span *ngIf="checkoutform.get('email').touched &&checkoutform.get('email').hasError('required')">Enter Email Address</span>
+                <!-- <span *ngIf="checkoutform.get('email').touched &&checkoutform.get('email')hasError('required')">Enter Valid Email Address</span> -->
             </div>
         </div>
         <div class="form-group row">
             <label for="inputPassword3" class="col-sm-2 col-form-label">Quantity</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" id="inputPassword3" formControlName="quantity">
-                <span *ngIf="checkoutform.get('quantity').touched &&checkoutform.get('quantity')hasError('required')">Enter Quantity Amount</span>
+                <span *ngIf="checkoutform.get('quantity').touched &&checkoutform.get('quantity').hasError('required')">Enter Quantity Amount</span>
             </div>
         </div>
         <div class="form-group row">
@@ -30,7 +30,13 @@
         <div class="form-group row">
             <div class="col-sm-10">
                 <button type="submit" class="btn btn-primary" [disabled]="!checkoutform.valid">CheckOut</button>
+                <button type="submit" class="btn btn-primary" (click)="resetForm();">Clear</button>
             </div>
         </div>
     </form>
+</div>
+
+
+<div>
+    The entered Value is : {{ valueChangedTracked }}
 </div>
