--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -18,6 +18,18 @@
             </div>
         </div>
         <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">Items</label>
+            <div class="col-sm-10" formArrayName="items">
+                <div *ngFor="let item of checkoutform.controls.items['controls']; let i=index" [formGroupName]="i">
+                    <a [routerLink] (click)="removeItem(i)">remove</a>
+                    <input type="text" class="form-control" id="task{{i}}" formControlName="itemName">
+                    <input type="text" class="form-control" id="task{{i}}" formControlName="itemDesc">
+                    <input type="checkbox" formControlName="itemDone"> Mark as Done
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group row">
             <div class="col-sm-10 offset-sm-2">
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="gridCheck1" formControlName="terms">
@@ -27,10 +39,12 @@
                 </div>
             </div>
         </div>
+
         <div class="form-group row">
             <div class="col-sm-10">
                 <button type="submit" class="btn btn-primary" [disabled]="!checkoutform.valid">CheckOut</button>
                 <button type="submit" class="btn btn-primary" (click)="resetForm();">Clear</button>
+                <button type="submit" class="btn btn-primary" (click)="addNewItem();">Add Row</button>
             </div>
         </div>
     </form>
