--- a/src/app/contacts/contacts/contacts.component.html
+++ b/src/app/contacts/contacts/contacts.component.html
@@ -19,4 +19,5 @@
     </form>
     <button (click)="updateContacts(3)">Update Contacts</button>
     <button (click)="deleteContact(44)">Delete Contacts</button>
+    <button (click)="getContact()">Search Contacts</button>
 </div>
